Edited wiki page miniz_performance_comparison through web user interface.

--- a/wiki/miniz_performance_comparison.wiki
+++ b/wiki/miniz_performance_comparison.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-This page shows how miniz.c compares to several other popular open source data compression codecs at compression level 9 (max compression). The data here was generated using a slightly modified and enhanced version of [http://en.wikipedia.org/wiki/John_W._Ratcliff John Ratcliff's] [http://code.google.com/p/compressiontest/ compressiontest] project, compiled to x64.
+This page shows how miniz.c compares to several other popular open source data compression codecs at compression level 9 (max compression), and one example (enwik8) at level 1 (fastest compression). The data here was generated using a slightly modified and enhanced version of [http://en.wikipedia.org/wiki/John_W._Ratcliff John Ratcliff's] [http://code.google.com/p/compressiontest/ compressiontest] project, compiled to x64.
 
 For comparison purposes, I've added [http://nothings.org/stb_image.c stb_image.c]'s Inflater implementation to compresssiontest, and [http://code.google.com/p/lzham/ LZHAM] alpha7. Note that miniz.c is used for compressing the data supplied to stb_image.c for decompression (stb_image.c does not include compression support). Also, stb_image.c does not compute an [http://en.wikipedia.org/wiki/Adler32 Adler-32] checksum of the uncompressed data, and miniz.c and zlib do, so its actual "apples to apples" performance is lower than reported here. (Approximately 10% of miniz.c's decompression time is spent computing the Adler32 checksum.)
 
@@ -41,6 +41,25 @@ Decompress:CT_LIBLZF  :FROM: 53,945,398 TO:100,000,000      428 MS
 Decompress:CT_LZMA    :FROM: 25,209,489 TO:100,000,000    1,505 MS
 Decompress:CT_FASTLZ  :FROM: 54,163,029 TO:100,000,000      455 MS
 Decompress:CT_LZHAM   :FROM: 25,248,714 TO:100,000,000      853 MS
+}}}
+
+*File: [http://cs.fit.edu/~mmahoney/compression/textdata.html enwik8], miniz.c level 1 - fastest compression, compares miniz and stb_image.c only (all other results are the same as above)*
+{{{
+E:\lzham\compressiontest\test_compression>test_compression_x64.exe e:\dev\corpus\enwik8\enwik8
+x64 version - miniz level 1 (fastest)
+Reading test file 'e:\dev\corpus\enwik8\enwik8' which is 100,000,000 bytes long.
+
+---------------------------------------------------------------
+Testing Compression rate and speed with various compressors.
+---------------------------------------------------------------
+Compress:CT_STB     :FROM:100,000,000 TO: 40,669,733 59.33%    2,061 MS
+Compress:CT_MINIZ   :FROM:100,000,000 TO: 40,669,733 59.33%    2,061 MS
+
+---------------------------------------------------------------
+Testing Decompression speed with various decompressors.
+---------------------------------------------------------------
+Decompress:CT_STB     :FROM: 40,669,733 TO:100,000,000      810 MS
+Decompress:CT_MINIZ   :FROM: 40,669,733 TO:100,000,000      616 MS
 }}}
 
 *File: [http://cs.fit.edu/~mmahoney/compression/textdata.html enwik9]*
