Edited wiki page miniz_performance_comparison through web user interface.

--- a/wiki/miniz_performance_comparison.wiki
+++ b/wiki/miniz_performance_comparison.wiki
@@ -4,7 +4,7 @@
 
 This page shows how miniz.c compares to several other popular open source data compression codecs at compression level 9 (max compression), with one example (enwik8) at level 1 (fastest compression). The data here was generated using a slightly modified and enhanced version of [http://en.wikipedia.org/wiki/John_W._Ratcliff John Ratcliff's] [http://code.google.com/p/compressiontest/ compressiontest] project, compiled to x64.
 
-For comparison purposes, I've added [http://nothings.org/stb_image.c stb_image.c]'s Inflater implementation to compresssiontest, and [http://code.google.com/p/lzham/ LZHAM] alpha7. Note that miniz.c is used for compressing the data supplied to stb_image.c for decompression (stb_image.c does not include a compressor, [nothings.org/stb/stb_image_write.h stb_image_write.h] does but I ran out of time to try it). Also, stb_image.c does not compute an [http://en.wikipedia.org/wiki/Adler32 Adler-32] checksum of the uncompressed data, and miniz.c and zlib do, so its actual "apples to apples" performance is lower than reported here. (Approximately 10% of miniz.c's decompression time is spent computing the Adler32 checksum.)
+For comparison purposes, I've added [http://nothings.org/stb_image.c stb_image.c]'s Inflater implementation to compresssiontest, and [http://code.google.com/p/lzham/ LZHAM] alpha7. Note that miniz.c is used for compressing the data supplied to stb_image.c for decompression (stb_image.c does not include a compressor, [http://nothings.org/stb/stb_image_write.h stb_image_write.h] does but I ran out of time to try it). Also, stb_image.c does not compute an [http://en.wikipedia.org/wiki/Adler32 Adler-32] checksum of the uncompressed data, and miniz.c and zlib do, so its actual "apples to apples" performance is lower than reported here. (Approximately 10% of miniz.c's decompression time is spent computing the Adler32 checksum.)
 
 Test machine: Win7 Ultimate x64, Intel Gulftown Core i7 3.2GHz (6 cores, 12 hyperthreads), 24GB of RAM, EVGA X58 motherboard. All code was compiled with Visual Studio 2005.
 
