--- a/wiki/miniz_performance_comparison_v110.wiki
+++ b/wiki/miniz_performance_comparison_v110.wiki
@@ -1,4 +1,4 @@
-#summary miniz compared to other compressors
+#summary miniz compared to other real-time and high-ratio compressors
 
 = Introduction =
 
@@ -119,137 +119,137 @@ Decompress:CT_LZHAM   :FROM:219,044,419 TO:1,000,000,000    7,472 MS
 
 *File: Entire Large [http://www.data-compression.info/Corpora/CalgaryCorpus/ Calgary Corpus] added to a single uncompressed 7zip archive (miniz.c compression level 9):*
 {{{
-E:\lzham\compressiontest\test_compression>test_compression_x64 e:\dev\corpus\calgary_corpus.7z
+E:\lzham\compressiontest\test_compression>test_compression_x64.exe e:\dev\corpus\calgary_corpus.7z
 x64 version
 Reading test file 'e:\dev\corpus\calgary_corpus.7z' which is 3,251,898 bytes long.
 
 ---------------------------------------------------------------
 Testing Compression rate and speed with various compressors.
 ---------------------------------------------------------------
-Compress:CT_STB     :FROM:  3,251,898 TO:  1,065,056 67.25%      317 MS
-Compress:CT_MINIZ   :FROM:  3,251,898 TO:  1,065,056 67.25%      317 MS
+Compress:CT_STB     :FROM:  3,251,898 TO:  1,065,470 67.24%      224 MS
+Compress:CT_MINIZ   :FROM:  3,251,898 TO:  1,065,470 67.24%      224 MS
 Compress:CT_CRYPTO  :FROM:  3,251,898 TO:  1,067,241 67.18%      240 MS
-Compress:CT_MINILZO :FROM:  3,251,898 TO:  1,581,684 51.36%       25 MS
-Compress:CT_ZLIB    :FROM:  3,251,898 TO:  1,059,243 67.43%      351 MS
-Compress:CT_BZIP    :FROM:  3,251,898 TO:    961,353 70.44%      273 MS
+Compress:CT_MINILZO :FROM:  3,251,898 TO:  1,581,684 51.36%       26 MS
+Compress:CT_ZLIB    :FROM:  3,251,898 TO:  1,059,243 67.43%      353 MS
+Compress:CT_BZIP    :FROM:  3,251,898 TO:    961,353 70.44%      277 MS
 Compress:CT_LIBLZF  :FROM:  3,251,898 TO:  1,593,245 51.01%       20 MS
-Compress:CT_LZMA    :FROM:  3,251,898 TO:    853,241 73.76%    1,267 MS
-Compress:CT_FASTLZ  :FROM:  3,251,898 TO:  1,606,374 50.60%       22 MS
-Compress:CT_LZHAM   :FROM:  3,251,898 TO:    891,866 72.57%      998 MS
+Compress:CT_LZMA    :FROM:  3,251,898 TO:    853,241 73.76%    1,570 MS
+Compress:CT_FASTLZ  :FROM:  3,251,898 TO:  1,606,374 50.60%       21 MS
+Compress:CT_LZHAM   :FROM:  3,251,898 TO:    893,578 72.52%    1,028 MS
 
 ---------------------------------------------------------------
 Testing Decompression speed with various decompressors.
 ---------------------------------------------------------------
-Decompress:CT_STB     :FROM:  1,065,056 TO:  3,251,898       22 MS
-Decompress:CT_MINIZ   :FROM:  1,065,056 TO:  3,251,898       16 MS
+Decompress:CT_STB     :FROM:  1,065,470 TO:  3,251,898       22 MS
+Decompress:CT_MINIZ   :FROM:  1,065,470 TO:  3,251,898       17 MS
 Decompress:CT_CRYPTO  :FROM:  1,067,241 TO:  3,251,898       54 MS
-Decompress:CT_MINILZO :FROM:  1,581,684 TO:  3,251,898       13 MS
+Decompress:CT_MINILZO :FROM:  1,581,684 TO:  3,251,898       14 MS
 Decompress:CT_ZLIB    :FROM:  1,059,243 TO:  3,251,898       17 MS
 Decompress:CT_BZIP    :FROM:    961,353 TO:  3,251,898      104 MS
-Decompress:CT_LIBLZF  :FROM:  1,593,245 TO:  3,251,898       12 MS
-Decompress:CT_LZMA    :FROM:    853,241 TO:  3,251,898       54 MS
+Decompress:CT_LIBLZF  :FROM:  1,593,245 TO:  3,251,898       13 MS
+Decompress:CT_LZMA    :FROM:    853,241 TO:  3,251,898       55 MS
 Decompress:CT_FASTLZ  :FROM:  1,606,374 TO:  3,251,898       13 MS
-Decompress:CT_LZHAM   :FROM:    891,866 TO:  3,251,898       38 MS
+Decompress:CT_LZHAM   :FROM:    893,578 TO:  3,251,898       39 MS
 }}}
 
 *File: "pic" from the Large [http://www.data-compression.info/Corpora/CalgaryCorpus/ Calgary Corpus] (miniz.c compression level 9):*
 {{{
-E:\lzham\compressiontest\test_compression>test_compression_x64 e:\dev\corpus\large_calgary_corpus\pic
+E:\lzham\compressiontest\test_compression>test_compression_x64.exe e:\dev\corpus\large_calgary_corpus\pic
 x64 version
 Reading test file 'e:\dev\corpus\large_calgary_corpus\pic' which is 513,216 bytes long.
 
 ---------------------------------------------------------------
 Testing Compression rate and speed with various compressors.
 ---------------------------------------------------------------
-Compress:CT_STB     :FROM:    513,216 TO:     53,267 89.62%       65 MS
-Compress:CT_MINIZ   :FROM:    513,216 TO:     53,267 89.62%       65 MS
-Compress:CT_CRYPTO  :FROM:    513,216 TO:     57,166 88.86%       19 MS
+Compress:CT_STB     :FROM:    513,216 TO:     53,721 89.53%       26 MS
+Compress:CT_MINIZ   :FROM:    513,216 TO:     53,721 89.53%       26 MS
+Compress:CT_CRYPTO  :FROM:    513,216 TO:     57,166 88.86%       18 MS
 Compress:CT_MINILZO :FROM:    513,216 TO:     86,304 83.18%        2 MS
-Compress:CT_ZLIB    :FROM:    513,216 TO:     52,237 89.82%       97 MS
-Compress:CT_BZIP    :FROM:    513,216 TO:     49,928 90.27%       16 MS
+Compress:CT_ZLIB    :FROM:    513,216 TO:     52,237 89.82%       96 MS
+Compress:CT_BZIP    :FROM:    513,216 TO:     49,928 90.27%       17 MS
 Compress:CT_LIBLZF  :FROM:    513,216 TO:     80,772 84.26%        1 MS
-Compress:CT_LZMA    :FROM:    513,216 TO:     41,897 91.84%      163 MS
+Compress:CT_LZMA    :FROM:    513,216 TO:     41,897 91.84%      367 MS
 Compress:CT_FASTLZ  :FROM:    513,216 TO:     81,960 84.03%        1 MS
-Compress:CT_LZHAM   :FROM:    513,216 TO:     47,438 90.76%      506 MS
+Compress:CT_LZHAM   :FROM:    513,216 TO:     47,437 90.76%      515 MS
 
 ---------------------------------------------------------------
 Testing Decompression speed with various decompressors.
 ---------------------------------------------------------------
-Decompress:CT_STB     :FROM:     53,267 TO:    513,216        2 MS
-Decompress:CT_MINIZ   :FROM:     53,267 TO:    513,216        1 MS
-Decompress:CT_CRYPTO  :FROM:     57,166 TO:    513,216        5 MS
-Decompress:CT_MINILZO :FROM:     86,304 TO:    513,216        1 MS
-Decompress:CT_ZLIB    :FROM:     52,237 TO:    513,216        2 MS
+Decompress:CT_STB     :FROM:     53,721 TO:    513,216        2 MS
+Decompress:CT_MINIZ   :FROM:     53,721 TO:    513,216        2 MS
+Decompress:CT_CRYPTO  :FROM:     57,166 TO:    513,216        4 MS
+Decompress:CT_MINILZO :FROM:     86,304 TO:    513,216        2 MS
+Decompress:CT_ZLIB    :FROM:     52,237 TO:    513,216        1 MS
 Decompress:CT_BZIP    :FROM:     49,928 TO:    513,216        6 MS
 Decompress:CT_LIBLZF  :FROM:     80,772 TO:    513,216        1 MS
 Decompress:CT_LZMA    :FROM:     41,897 TO:    513,216        4 MS
 Decompress:CT_FASTLZ  :FROM:     81,960 TO:    513,216        1 MS
-Decompress:CT_LZHAM   :FROM:     47,438 TO:    513,216        7 MS
+Decompress:CT_LZHAM   :FROM:     47,437 TO:    513,216        7 MS
 }}}
 
 *Files: Uncompressed 7zip archive of an Adobe Acrobat Reader 9.0 installation (miniz.c compression level 9):*
 {{{
-E:\lzham\compressiontest\test_compression>test_compression_x64 e:\dev\corpus\adobe.7z
+E:\lzham\compressiontest\test_compression>test_compression_x64.exe e:\dev\corpus\adobe.7z
 x64 version
 Reading test file 'e:\dev\corpus\adobe.7z' which is 146,332,683 bytes long.
 
 ---------------------------------------------------------------
 Testing Compression rate and speed with various compressors.
 ---------------------------------------------------------------
-Compress:CT_STB     :FROM:146,332,683 TO: 89,209,529 39.04%   12,681 MS
-Compress:CT_MINIZ   :FROM:146,332,683 TO: 89,209,529 39.04%   12,681 MS
-Compress:CT_CRYPTO  :FROM:146,332,683 TO: 91,494,418 37.48%    7,077 MS
-Compress:CT_MINILZO :FROM:146,332,683 TO:101,687,569 30.51%    1,711 MS
-Compress:CT_ZLIB    :FROM:146,332,683 TO: 89,166,466 39.07%   13,033 MS
-Compress:CT_BZIP    :FROM:146,332,683 TO: 89,072,636 39.13%   18,490 MS
-Compress:CT_LIBLZF  :FROM:146,332,683 TO:106,352,717 27.32%    1,070 MS
-Compress:CT_LZMA    :FROM:146,332,683 TO: 76,305,505 47.85%   55,814 MS
+Compress:CT_STB     :FROM:146,332,683 TO: 89,281,876 38.99%    9,780 MS
+Compress:CT_MINIZ   :FROM:146,332,683 TO: 89,281,876 38.99%    9,781 MS
+Compress:CT_CRYPTO  :FROM:146,332,683 TO: 91,494,418 37.48%    7,156 MS
+Compress:CT_MINILZO :FROM:146,332,683 TO:101,687,569 30.51%    1,702 MS
+Compress:CT_ZLIB    :FROM:146,332,683 TO: 89,166,466 39.07%   13,143 MS
+Compress:CT_BZIP    :FROM:146,332,683 TO: 89,072,636 39.13%   20,828 MS
+Compress:CT_LIBLZF  :FROM:146,332,683 TO:106,352,717 27.32%    1,100 MS
+Compress:CT_LZMA    :FROM:146,332,683 TO: 74,361,137 49.18%   59,076 MS
 Compress:CT_FASTLZ  :FROM:146,332,683 TO:105,548,437 27.87%    1,032 MS
-Compress:CT_LZHAM   :FROM:146,332,683 TO: 77,260,885 47.20%   37,946 MS
+Compress:CT_LZHAM   :FROM:146,332,683 TO: 75,314,840 48.53%   42,354 MS
 
 ---------------------------------------------------------------
 Testing Decompression speed with various decompressors.
 ---------------------------------------------------------------
-Decompress:CT_STB     :FROM: 89,209,529 TO:146,332,683    1,114 MS
-Decompress:CT_MINIZ   :FROM: 89,209,529 TO:146,332,683      771 MS
-Decompress:CT_CRYPTO  :FROM: 91,494,418 TO:146,332,683    2,133 MS
-Decompress:CT_MINILZO :FROM:101,687,569 TO:146,332,683      544 MS
-Decompress:CT_ZLIB    :FROM: 89,166,466 TO:146,332,683      816 MS
-Decompress:CT_BZIP    :FROM: 89,072,636 TO:146,332,683    7,108 MS
-Decompress:CT_LIBLZF  :FROM:106,352,717 TO:146,332,683      562 MS
-Decompress:CT_LZMA    :FROM: 76,305,505 TO:146,332,683    5,383 MS
-Decompress:CT_FASTLZ  :FROM:105,548,437 TO:146,332,683      556 MS
-Decompress:CT_LZHAM   :FROM: 77,260,885 TO:146,332,683    1,734 MS
+Decompress:CT_STB     :FROM: 89,281,876 TO:146,332,683    1,119 MS
+Decompress:CT_MINIZ   :FROM: 89,281,876 TO:146,332,683      773 MS
+Decompress:CT_CRYPTO  :FROM: 91,494,418 TO:146,332,683    2,142 MS
+Decompress:CT_MINILZO :FROM:101,687,569 TO:146,332,683      545 MS
+Decompress:CT_ZLIB    :FROM: 89,166,466 TO:146,332,683      820 MS
+Decompress:CT_BZIP    :FROM: 89,072,636 TO:146,332,683    7,101 MS
+Decompress:CT_LIBLZF  :FROM:106,352,717 TO:146,332,683      565 MS
+Decompress:CT_LZMA    :FROM: 74,361,137 TO:146,332,683    5,259 MS
+Decompress:CT_FASTLZ  :FROM:105,548,437 TO:146,332,683      573 MS
+Decompress:CT_LZHAM   :FROM: 75,314,840 TO:146,332,683    1,761 MS
 }}}
 
 *File: miniz3_v109.zip (a test of how well various codecs handle already compressed data) (miniz.c compression level 9):*
 {{{
-E:\lzham\compressiontest\test_compression>test_compression_x64 e:\dev\miniz3_v109.zip
+E:\lzham\compressiontest\test_compression>test_compression_x64.exe e:\dev\miniz3_v109.zip
 x64 version
 Reading test file 'e:\dev\miniz3_v109.zip' which is 417,549 bytes long.
 
 ---------------------------------------------------------------
 Testing Compression rate and speed with various compressors.
 ---------------------------------------------------------------
-Compress:CT_STB     :FROM:    417,549 TO:    416,325 0.29%      149 MS
-Compress:CT_MINIZ   :FROM:    417,549 TO:    416,325 0.29%      149 MS
+Compress:CT_STB     :FROM:    417,549 TO:    416,312 0.30%       17 MS
+Compress:CT_MINIZ   :FROM:    417,549 TO:    416,312 0.30%       17 MS
 Compress:CT_CRYPTO  :FROM:    417,549 TO:    417,658 -0.03%        9 MS
 Compress:CT_MINILZO :FROM:    417,549 TO:    417,760 -0.05%        7 MS
 Compress:CT_ZLIB    :FROM:    417,549 TO:    416,408 0.27%       18 MS
-Compress:CT_BZIP    :FROM:    417,549 TO:    420,125 -0.62%       72 MS
+Compress:CT_BZIP    :FROM:    417,549 TO:    420,125 -0.62%       88 MS
 Compress:CT_LIBLZF  :FROM:    417,549 TO:    429,060 -2.76%        4 MS
-Compress:CT_LZMA    :FROM:    417,549 TO:    420,196 -0.63%      107 MS
+Compress:CT_LZMA    :FROM:    417,549 TO:    420,196 -0.63%      313 MS
 Compress:CT_FASTLZ  :FROM:    417,549 TO:    429,044 -2.75%        3 MS
-Compress:CT_LZHAM   :FROM:    417,549 TO:    417,575 -0.01%       77 MS
+Compress:CT_LZHAM   :FROM:    417,549 TO:    417,575 -0.01%       82 MS
 
 ---------------------------------------------------------------
 Testing Decompression speed with various decompressors.
 ---------------------------------------------------------------
-Decompress:CT_STB     :FROM:    416,325 TO:    417,549        1 MS
-Decompress:CT_MINIZ   :FROM:    416,325 TO:    417,549        2 MS
+Decompress:CT_STB     :FROM:    416,312 TO:    417,549        2 MS
+Decompress:CT_MINIZ   :FROM:    416,312 TO:    417,549        1 MS
 Decompress:CT_CRYPTO  :FROM:    417,658 TO:    417,549        2 MS
-Decompress:CT_MINILZO :FROM:    417,760 TO:    417,549        2 MS
-Decompress:CT_ZLIB    :FROM:    416,408 TO:    417,549        1 MS
+Decompress:CT_MINILZO :FROM:    417,760 TO:    417,549        1 MS
+Decompress:CT_ZLIB    :FROM:    416,408 TO:    417,549        2 MS
 Decompress:CT_BZIP    :FROM:    420,125 TO:    417,549       28 MS
 Decompress:CT_LIBLZF  :FROM:    429,060 TO:    417,549        2 MS
 Decompress:CT_LZMA    :FROM:    420,196 TO:    417,549       29 MS
